<?xml version="1.0"?>
<package format="2">
  <name>rosbag_time_filter</name>
  <version>1.0.0</version>
  <description>A tool for time-based filtering of ROS bag files</description>
  <maintainer email="tao.hang@cn.bosch.com">Tao Hang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>boost</depend>
</package>
